--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js"
-
   },
+  
   "keywords": [],
   "author": "Marco Bolaños",
   "license": "ISC",
   "type": "module",
   "description": "API oara la gestion de adopcion de las mascotas",
   "dependencies": {
-    "adoptionsystem": "file:"
+    "adoptionsystem": "file:",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "helmet": "^8.0.0",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
