--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  
   "keywords": [],
   "author": "Marco Bolaños",
   "license": "ISC",
@@ -15,6 +14,7 @@
   "description": "API oara la gestion de adopcion de las mascotas",
   "dependencies": {
     "adoptionsystem": "file:",
+    "argon2": "^0.41.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
